# nitro_log_web

./: .gitignore  Cargo.toml  README.md
actix_test/: Cargo.toml
actix_test/src/: main.rs  test.json
frontend/common/: package.json
frontend/vue/: package.json
src/: lib.rs  web_target.rs
src/actix/: mod.rs
src/comms/: mod.rs  tokio_comms.rs
