[package]
name = "actix_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features = ["std", "serde", "kv_unstable", "kv_unstable_serde", "kv_unstable_std"] }
nitro_log = { path = "../../nitro_log" }
actix-web-actors = "4.1.0"
actix-web = "4.0.1"
actix-service = "2.0.2"
actix = "0.13.0"
nitro_log_web = { path = "../" }
serde_json = "1.0.81"